--- a/pom.xml
+++ b/pom.xml
@@ -69,9 +69,11 @@
 					</execution>
 				</executions>
 				<configuration>
-					<repository>mo1207/employee-rest-aws</repository>
+					<repository>mo1207/${project.artifactId}</repository>
 					<tag>${project.version}</tag>
-					<skipDockerInfo>true</skipDockerInfo>
+					<buildArgs>
+						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
 				</configuration>
 			</plugin>
 		</plugins>
